--- a/tpl/linklist.html
+++ b/tpl/linklist.html
@@ -61,6 +61,13 @@
                 <div class="linkqrcode"><a href="http://qrfree.kaywa.com/?l=1&amp;s=8&amp;d={$scripturl|urlencode}%3F{$value.linkdate|smallHash}"
                     onclick="return showQrCode(this);" class="qrcode" data-permalink="{$scripturl}?{$value.linkdate|smallHash}">
 		    <img src="images/qrcode.png#" alt="QR-Code" title="{function="strftime('%c', $value.timestamp)"}"></a></div> -
+                <!-- We need to assign those because include'ing changes the scope for $value, and
+                looping does too
+                Funfact: don't add spaces when assigning. IT doesn't assign and prints the value -->
+                {$link=$value}
+                {loop="$plugins_linklist"}
+                    <span>{include="$value"}</span>
+                {/loop}
                 <a href="{$value.url}"><span class="linkurl" title="Short link">{$value.url}</span></a><br>
                 {if="$value.tags"}
                     <div class="linktaglist">
