--- a/tpl/page.header.html
+++ b/tpl/page.header.html
@@ -33,6 +33,9 @@
     <li><a href="?do=tagcloud">Tag cloud</a></li>
     <li><a href="?do=picwall{$searchcrits}">Picture wall</a></li>
     <li><a href="?do=daily">Daily</a></li>
+    {loop="$plugins_toolbar"}
+        {include="$value"}
+    {/loop}
 {/if}
   </ul>
 </div>
