--- a/tpl/linklist.html
+++ b/tpl/linklist.html
@@ -66,7 +66,7 @@
         {loop="links"}
         <li{if="$value.class"} class="{$value.class}"{/if}>
             <a id="{$value.shorturl}"></a>
-            <div class="thumbnail">{$value.url|thumbnail}</div>
+            <div class="thumbnail">{$value.thumbnail}</div>
             <div class="linkcontainer">
                 {if="isLoggedIn()"}
                     <div class="linkeditbuttons">
