--- a/tpl/tools.html
+++ b/tpl/tools.html
@@ -17,6 +17,8 @@
     <br><br>
 		<a href="?do=export"><b>Export</b><span>: Export Netscape html bookmarks (which can be imported in Firefox, Chrome, Opera, delicious...)</span></a>
     <br><br>
+        <a href="?do=clearcache"><b>Clear cache</b><span>: Purge all Shaarli's cache files.</span></a>
+    <br><br>
 		<a class="smallbutton"
 		   onclick="return alertBookmarklet();"
 		   href="javascript:(
