--- a/tpl/vintage/linklist.html
+++ b/tpl/vintage/linklist.html
@@ -94,7 +94,7 @@
                     </div>
                 {/if}
                 <span class="linktitle">
-                    <a href="{$value.real_url}">{$value.title}</a>
+                    <a href="{$value.real_url}">{$value.title_display}</a>
                 </span>
                 <br>
                 {if="$value.description"}<div class="linkdescription">{$value.description}</div>{/if}
