--- a/tpl/default/linklist.html
+++ b/tpl/default/linklist.html
@@ -143,7 +143,7 @@
                   <i class="fa fa-sticky-note"></i>
                 {/if}
 
-                <span class="linklist-link">{$value.title}</span>
+                <span class="linklist-link">{$value.title_display}</span>
               </a>
             </h2>
           </div>
@@ -202,7 +202,7 @@
                 {ignore}do not add space or line break between these div - Firefox issue{/ignore}
                 class="linklist-item-infos-url pure-u-lg-5-8 pure-u-1">
                 <a href="{$value.real_url}" title="{$value.title}">
-                  <i class="fa fa-link"></i> {$value.url}
+                  <i class="fa fa-link"></i> {$value.url_display}
                 </a>
                 {if="isLoggedIn()"}
                   <a href="?delete_link&amp;lf_linkdate={$value.id}&amp;token={$token}"
