--- a/tpl/default/picwall.html
+++ b/tpl/default/picwall.html
@@ -39,7 +39,7 @@
 </div>
 
 {include="page.footer"}
-<script src="inc/blazy-1.3.1.min.js#"></script>
+<script src="js/picwall.js"></script>
 </body>
 </html>
 
