--- a/tpl/vintage/linklist.paging.html
+++ b/tpl/vintage/linklist.paging.html
@@ -3,9 +3,9 @@
     <div class="paging_privatelinks">
         <a href="?privateonly">
 		{if="$privateonly"}
-		<img src="images/private_16x16_active.png#" width="16" height="16" title="Click to see all links" alt="Click to see all links">
+		<img src="img/private_16x16_active.png" width="16" height="16" title="Click to see all links" alt="Click to see all links">
 		{else}
-		<img src="images/private_16x16.png#" width="16" height="16" title="Click to see only private links" alt="Click to see only private links">
+		<img src="img/private_16x16.png" width="16" height="16" title="Click to see only private links" alt="Click to see only private links">
 		{/if}
 		</a>
 
