--- a/tpl/default/page.footer.html
+++ b/tpl/default/page.footer.html
@@ -38,4 +38,4 @@
   </span>
 </div>
 
-<script src="js/shaarli.js?v={$version_hash}"></script>
+<script src="js/shaarli.min.js?v={$version_hash}"></script>
