--- a/tpl/default/picwall.html
+++ b/tpl/default/picwall.html
@@ -39,7 +39,7 @@
 </div>
 
 {include="page.footer"}
-<script src="js/picwall.js"></script>
+<script src="js/picwall.min.js?v={$version_hash}"></script>
 </body>
 </html>
 
