--- a/tpl/default/pluginsadmin.html
+++ b/tpl/default/pluginsadmin.html
@@ -176,7 +176,7 @@
 </form>
 
 {include="page.footer"}
-<script src="js/pluginsadmin.js"></script>
+<script src="js/pluginsadmin.min.js?v={$version_hash}"></script>
 
 </body>
 </html>
