--- a/tpl/vintage/page.footer.html
+++ b/tpl/vintage/page.footer.html
@@ -23,7 +23,7 @@
 </div>
 {/if}
 
-<script src="js/shaarli.js"></script>
+<script src="js/shaarli.min.js"></script>
 
 {if="isLoggedIn()"}
 <script>function confirmDeleteLink() { var agree=confirm("Are you sure you want to delete this link ?"); if (agree) return true ; else return false ; }</script>
