--- a/tpl/default/linklist.html
+++ b/tpl/default/linklist.html
@@ -264,6 +264,11 @@
                   {/loop}
                 {/if}
                 {if="$is_logged_in"}
+                  <a href="?do=pin&amp;id={$value.id}&amp;token={$token}"
+                    title="{$strToggleSticky}" aria-label="{$strToggleSticky}" class="pin-link {if="$value.sticky"}pinned-link{/if}">
+                    <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                  </a>
+                    </span>
                   &middot;
                   <a href="?delete_link&amp;lf_linkdate={$value.id}&amp;token={$token}" aria-label="{$strDelete}"
                      title="{$strDelete}" class="delete-link confirm-delete">
